# cli

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  cliff.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  release-plz.yml  release.yml
docs/: CLI_DESIGN.md
mock_data/: api_responses.json  deployments.json  links.json  logs.json  orgs.json  projects.json  tickets.json  users.json
src/: cli.rs  git.rs  main.rs  shared.rs  tui.rs  update.rs
