[package]
name = "devver-cli"
version = "0.0.1"
edition = "2024"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
